--- a/Data/NovaRecipesProject.Context/NovaRecipesProject.Context.csproj
+++ b/Data/NovaRecipesProject.Context/NovaRecipesProject.Context.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>E:\projects SSD\DSR\NovaRecipesProject\api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
