--- a/Systems/Api/NovaRecipesProject.Api/appsettings.json
+++ b/Systems/Api/NovaRecipesProject.Api/appsettings.json
@@ -6,7 +6,8 @@
       "Default": "Debug",
       "Override": {
         "Microsoft": "Debug",
-        "Microsoft.Hosting.Lifetime": "Debug"
+        "Microsoft.Hosting.Lifetime": "Debug",
+        "Npgsql": "Debug"
       }
     },
     "WriteTo": [
