--- a/Systems/Identity/NovaRecipesProject.Identity/appsettings.Development.json
+++ b/Systems/Identity/NovaRecipesProject.Identity/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Database": {
+    "Type": "PostgreSQL",
+    "ConnectionString": "Server=localhost;Port=5432;Database=NovaRecipesProject;User Id=postgres;Password=Passw0rd;"
   }
 }
