--- a/Systems/Identity/NovaRecipesProject.Identity/appsettings.json
+++ b/Systems/Identity/NovaRecipesProject.Identity/appsettings.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Debug",
+        "Microsoft.Hosting.Lifetime": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss:fff} {Level:u3} ({CorrelationId})] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   },
-  "AllowedHosts": "*"
+
+  "Database": {
+    "Type": "PostgreSQL",
+    "ConnectionString": "Server=localhost;Port=5432;Database=NovaRecipesProject;User Id=postgres;Password=Passw0rd;"
+  }
+
 }
