--- a/Systems/Api/NovaRecipesProject.Api/Dockerfile
+++ b/Systems/Api/NovaRecipesProject.Api/Dockerfile
@@ -12,8 +12,9 @@ COPY ["Data/NovaRecipesProject.Context.Entities/NovaRecipesProject.Context.Entit
 COPY ["Data/NovaRecipesProject.Context/NovaRecipesProject.Context.csproj", "Data/NovaRecipesProject.Context/"]
 COPY ["Shared/NovaRecipesProject.Settings/NovaRecipesProject.Settings.csproj", "Shared/NovaRecipesProject.Settings/"]
 COPY ["Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/NovaRecipesProject.Context.Migrations.PostgreSQL.csproj", "Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/"]
-COPY ["Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj", "Services/NovaRecipesProject.Services.Recipes/"]
+COPY ["Services/NovaRecipesProject.Services.Categories/NovaRecipesProject.Services.Categories.csproj", "Services/NovaRecipesProject.Services.Categories/"]
 COPY ["Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj", "Shared/NovaRecipesProject.Common/"]
+COPY ["Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj", "Services/NovaRecipesProject.Services.Recipes/"]
 COPY ["Services/NovaRecipesProject.Services.Settings/NovaRecipesProject.Services.Settings.csproj", "Services/NovaRecipesProject.Services.Settings/"]
 COPY ["Services/NovaRecipesProject.Services.UserAccount/NovaRecipesProject.Services.UserAccount.csproj", "Services/NovaRecipesProject.Services.UserAccount/"]
 COPY ["Systems/Api/NovaRecipesProject.Api.Settings/NovaRecipesProject.Api.Settings.csproj", "Systems/Api/NovaRecipesProject.Api.Settings/"]
