--- a/Services/NovaRecipes.Services.Cache/NovaRecipes.Services.Cache.csproj
+++ b/Services/NovaRecipes.Services.Cache/NovaRecipes.Services.Cache.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,15 +7,17 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>../../api.xml</DocumentationFile>
   </PropertyGroup>
-
+	
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+	<PackageReference Include="StackExchange.Redis" Version="2.6.86" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="..\..\Data\NovaRecipesProject.Context\NovaRecipesProject.Context.csproj" />
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
-    <ProjectReference Include="..\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
+    <ProjectReference Include="..\..\Shared\NovaRecipesProject.Settings\NovaRecipesProject.Settings.csproj" />
   </ItemGroup>
 
 </Project>
