--- a/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
+++ b/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\NovaRecipesProject.Context\NovaRecipesProject.Context.csproj" />
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
+    <ProjectReference Include="..\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
   </ItemGroup>
 
 </Project>
