Added entity Ingredient Added new entity Ingredient which will be used in future as additional info for recipes and data about prots/carbs/fats will be filled using additional service Added new IngredientService for new entity, new DTOs and controller with basic methods Code fixes and code cleanup: Fixed mapping for existing DTO models; Made code cleaner by adding new BaseNameDescriptionRequest.cs DTO which will be used in Request DTOs

--- a/Services/NovaRecipes.Services.Cache/NovaRecipes.Services.Cache.csproj
+++ b/Services/NovaRecipes.Services.Cache/NovaRecipes.Services.Cache.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>../../api.xml</DocumentationFile>
+    <DocumentationFile>..\..\api.xml</DocumentationFile>
   </PropertyGroup>
 	
   <ItemGroup>
