--- a/Systems/Api/NovaRecipesProject.Api/NovaRecipesProject.Api.csproj
+++ b/Systems/Api/NovaRecipesProject.Api/NovaRecipesProject.Api.csproj
@@ -52,6 +52,7 @@
     <ProjectReference Include="..\..\..\Services\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Ingredients\NovaRecipesProject.Services.Ingredients.csproj" />
+    <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.RecipeParagraphs\NovaRecipesProject.Services.RecipeParagraphs.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Recipes\NovaRecipesProject.Services.Recipes.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Settings\NovaRecipesProject.Services.Settings.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.UserAccount\NovaRecipesProject.Services.UserAccount.csproj" />
@@ -62,6 +63,7 @@
   <ItemGroup>
 	<Folder Include="Configuration\" />
 	<Folder Include="Controllers\Categories\Models\" />
+	<Folder Include="Controllers\RecipeParagraphs\Models\" />
 	<Folder Include="Controllers\Recipes\" />
 	<Folder Include="Controllers\Accounts\" />
 	<Folder Include="wwwroot\" />
