--- a/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
+++ b/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\..\Data\NovaRecipesProject.Context\NovaRecipesProject.Context.csproj" />
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
     <ProjectReference Include="..\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
   </ItemGroup>
 
 </Project>
