Made controller method for displaying full info about Recipe in DB Made new WholeRecipe models and new methods in Services and Controller for Recipe entity

--- a/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
+++ b/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
     <ProjectReference Include="..\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.RecipeParagraphs\NovaRecipesProject.Services.RecipeParagraphs.csproj" />
   </ItemGroup>
 
 </Project>
