--- a/Systems/Api/NovaRecipesProject.Api/Dockerfile
+++ b/Systems/Api/NovaRecipesProject.Api/Dockerfile
@@ -14,6 +14,10 @@ COPY ["Shared/NovaRecipesProject.Settings/NovaRecipesProject.Settings.csproj", "
 COPY ["Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/NovaRecipesProject.Context.Migrations.PostgreSQL.csproj", "Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/"]
 COPY ["Services/NovaRecipes.Services.Cache/NovaRecipes.Services.Cache.csproj", "Services/NovaRecipes.Services.Cache/"]
 COPY ["Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj", "Shared/NovaRecipesProject.Common/"]
+COPY ["Services/NovaRecipesProject.Services.Actions/NovaRecipesProject.Services.Actions.csproj", "Services/NovaRecipesProject.Services.Actions/"]
+COPY ["Services/NovaRecipesProject.Services.EmailSender/NovaRecipesProject.Services.EmailSender.csproj", "Services/NovaRecipesProject.Services.EmailSender/"]
+COPY ["Shared/NovaRecipesProject.Consts/NovaRecipesProject.Consts.csproj", "Shared/NovaRecipesProject.Consts/"]
+COPY ["Services/NovaRecipesProject.Services.RabbitMq/NovaRecipesProject.Services.RabbitMq.csproj", "Services/NovaRecipesProject.Services.RabbitMq/"]
 COPY ["Services/NovaRecipesProject.Services.Categories/NovaRecipesProject.Services.Categories.csproj", "Services/NovaRecipesProject.Services.Categories/"]
 COPY ["Services/NovaRecipesProject.Services.Ingredients/NovaRecipesProject.Services.Ingredients.csproj", "Services/NovaRecipesProject.Services.Ingredients/"]
 COPY ["Services/NovaRecipesProject.Services.RecipeParagraphs/NovaRecipesProject.Services.RecipeParagraphs.csproj", "Services/NovaRecipesProject.Services.RecipeParagraphs/"]
