--- a/Systems/Workers/NovaRecipesProject.EmailSenderWorker/appsettings.json
+++ b/Systems/Workers/NovaRecipesProject.EmailSenderWorker/appsettings.json
@@ -6,8 +6,7 @@
       "Default": "Debug",
       "Override": {
         "Microsoft": "Debug",
-        "Microsoft.Hosting.Lifetime": "Debug",
-        "Npgsql": "Debug"
+        "Microsoft.Hosting.Lifetime": "Debug"
       }
     },
     "WriteTo": [
@@ -20,32 +19,9 @@
     ]
   },
 
-  "Main": {
-    "MainUrl": "http://localhost"
-  },
-
-  "Identity": {
-    "Url": "http://localhost:10001"
-  },
-
   "Database": {
     "Type": "PostgreSQL",
     "ConnectionString": "Server=localhost;Port=5432;Database=NovaRecipesProject;User Id=postgres;Password=Passw0rd;"
-  },
-
-  "Swagger": {
-    "Enabled": true,
-    "OAuthClientId": "",
-    "OAuthClientSecret": ""
-  },
-
-  "ApiSpecial": {
-    "HelloMessage": "Hello, NovaRecipes user!"
-  },
-
-  "Cache": {
-    "Uri": "http://localhost:6379,allowAdmin=true,abortConnect=false",
-    "CacheLifeTime": 1
   },
 
   "RabbitMq": {
