--- a/Systems/Api/NovaRecipesProject.Api/NovaRecipesProject.Api.csproj
+++ b/Systems/Api/NovaRecipesProject.Api/NovaRecipesProject.Api.csproj
@@ -50,8 +50,10 @@
     <ProjectReference Include="..\..\..\Data\Migrations\NovaRecipesProject.Context.Migrations.PostgreSQL\NovaRecipesProject.Context.Migrations.PostgreSQL.csproj" />
     <ProjectReference Include="..\..\..\Data\NovaRecipesProject.Context\NovaRecipesProject.Context.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipes.Services.Cache\NovaRecipes.Services.Cache.csproj" />
+    <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Actions\NovaRecipesProject.Services.Actions.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Ingredients\NovaRecipesProject.Services.Ingredients.csproj" />
+    <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.RabbitMq\NovaRecipesProject.Services.RabbitMq.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.RecipeParagraphs\NovaRecipesProject.Services.RecipeParagraphs.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Recipes\NovaRecipesProject.Services.Recipes.csproj" />
     <ProjectReference Include="..\..\..\Services\NovaRecipesProject.Services.Settings\NovaRecipesProject.Services.Settings.csproj" />
