Made basic email sending Made email sending for when account is created, email request sent, email is confirmed All configured with yandex smtp server and email

--- a/Services/NovaRecipesProject.Services.EmailSender/NovaRecipesProject.Services.EmailSender.csproj
+++ b/Services/NovaRecipesProject.Services.EmailSender/NovaRecipesProject.Services.EmailSender.csproj
@@ -9,12 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.6.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="MimeKit" Version="3.6.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Consts\NovaRecipesProject.Consts.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.Settings\NovaRecipesProject.Services.Settings.csproj" />
   </ItemGroup>
 
 </Project>
