--- a/Systems/Workers/NovaRecipesProject.EmailSenderWorker/appsettings.json
+++ b/Systems/Workers/NovaRecipesProject.EmailSenderWorker/appsettings.json
@@ -28,5 +28,13 @@
     "Uri": "amqp://localhost:5672",
     "UserName": "guest",
     "Password": "guest"
+  },
+
+  "EmailSender": {
+    "SmtpServer": "smtp.yandex.ru",
+    "SmtpPort": "465",
+    "UseSsl": "true",
+    "Username": "nickdur",
+    "Password": "ikcqdwddsxzeqheq"
   }
 }
