Added basic subscription for new recipes from some user Added feature that allows to setup email mailing about new recipe from some user to his subscribers Added new entity for recipe subscribers, Add new queue for such mailing, Added new worker for resolving messages from queue, Added new service that works with everything said before and which could be injected and used in any other service

--- a/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
+++ b/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
@@ -17,9 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\NovaRecipesProject.Context\NovaRecipesProject.Context.csproj" />
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
-    <ProjectReference Include="..\NovaRecipes.Services.Cache\NovaRecipesProject.Services.Cache.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.Cache\NovaRecipesProject.Services.Cache.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.RecipeParagraphs\NovaRecipesProject.Services.RecipeParagraphs.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.RecipesSubscriptions\NovaRecipesProject.Services.RecipesSubscriptions.csproj" />
   </ItemGroup>
 
 </Project>
