--- a/Systems/Api/NovaRecipesProject.Api/Dockerfile
+++ b/Systems/Api/NovaRecipesProject.Api/Dockerfile
@@ -12,17 +12,18 @@ COPY ["Data/NovaRecipesProject.Context.Entities/NovaRecipesProject.Context.Entit
 COPY ["Data/NovaRecipesProject.Context/NovaRecipesProject.Context.csproj", "Data/NovaRecipesProject.Context/"]
 COPY ["Shared/NovaRecipesProject.Settings/NovaRecipesProject.Settings.csproj", "Shared/NovaRecipesProject.Settings/"]
 COPY ["Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/NovaRecipesProject.Context.Migrations.PostgreSQL.csproj", "Data/Migrations/NovaRecipesProject.Context.Migrations.PostgreSQL/"]
-COPY ["Services/NovaRecipes.Services.Cache/NovaRecipesProject.Services.Cache.csproj", "Services/NovaRecipes.Services.Cache/"]
-COPY ["Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj", "Shared/NovaRecipesProject.Common/"]
 COPY ["Services/NovaRecipesProject.Services.Actions/NovaRecipesProject.Services.Actions.csproj", "Services/NovaRecipesProject.Services.Actions/"]
 COPY ["Services/NovaRecipesProject.Services.EmailSender/NovaRecipesProject.Services.EmailSender.csproj", "Services/NovaRecipesProject.Services.EmailSender/"]
 COPY ["Shared/NovaRecipesProject.Consts/NovaRecipesProject.Consts.csproj", "Shared/NovaRecipesProject.Consts/"]
+COPY ["Services/NovaRecipesProject.Services.Settings/NovaRecipesProject.Services.Settings.csproj", "Services/NovaRecipesProject.Services.Settings/"]
 COPY ["Services/NovaRecipesProject.Services.RabbitMq/NovaRecipesProject.Services.RabbitMq.csproj", "Services/NovaRecipesProject.Services.RabbitMq/"]
+COPY ["Services/NovaRecipesProject.Services.Cache/NovaRecipesProject.Services.Cache.csproj", "Services/NovaRecipesProject.Services.Cache/"]
+COPY ["Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj", "Shared/NovaRecipesProject.Common/"]
 COPY ["Services/NovaRecipesProject.Services.Categories/NovaRecipesProject.Services.Categories.csproj", "Services/NovaRecipesProject.Services.Categories/"]
 COPY ["Services/NovaRecipesProject.Services.Ingredients/NovaRecipesProject.Services.Ingredients.csproj", "Services/NovaRecipesProject.Services.Ingredients/"]
 COPY ["Services/NovaRecipesProject.Services.RecipeParagraphs/NovaRecipesProject.Services.RecipeParagraphs.csproj", "Services/NovaRecipesProject.Services.RecipeParagraphs/"]
+COPY ["Services/NovaRecipesProject.Services.RecipesSubscriptions/NovaRecipesProject.Services.RecipesSubscriptions.csproj", "Services/NovaRecipesProject.Services.RecipesSubscriptions/"]
 COPY ["Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj", "Services/NovaRecipesProject.Services.Recipes/"]
-COPY ["Services/NovaRecipesProject.Services.Settings/NovaRecipesProject.Services.Settings.csproj", "Services/NovaRecipesProject.Services.Settings/"]
 COPY ["Services/NovaRecipesProject.Services.UserAccount/NovaRecipesProject.Services.UserAccount.csproj", "Services/NovaRecipesProject.Services.UserAccount/"]
 COPY ["Systems/Api/NovaRecipesProject.Api.Settings/NovaRecipesProject.Api.Settings.csproj", "Systems/Api/NovaRecipesProject.Api.Settings/"]
 RUN dotnet restore "Systems/Api/NovaRecipesProject.Api/NovaRecipesProject.Api.csproj"
