Added email subscriptions Made service methods to let user subscribe for comments and notify subscribed users about a new comment Fixed namespaces for workers, added some fixes for DTO models and recipe's controller method for adding new comments

--- a/Systems/Api/NovaRecipesProject.Api/Dockerfile
+++ b/Systems/Api/NovaRecipesProject.Api/Dockerfile
@@ -21,6 +21,7 @@ COPY ["Services/NovaRecipesProject.Services.Cache/NovaRecipesProject.Services.Ca
 COPY ["Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj", "Shared/NovaRecipesProject.Common/"]
 COPY ["Services/NovaRecipesProject.Services.Categories/NovaRecipesProject.Services.Categories.csproj", "Services/NovaRecipesProject.Services.Categories/"]
 COPY ["Services/NovaRecipesProject.Services.Ingredients/NovaRecipesProject.Services.Ingredients.csproj", "Services/NovaRecipesProject.Services.Ingredients/"]
+COPY ["Services/NovaRecipesProject.Services.RecipeCommentsSubscriptions/NovaRecipesProject.Services.RecipeCommentsSubscriptions.csproj", "Services/NovaRecipesProject.Services.RecipeCommentsSubscriptions/"]
 COPY ["Services/NovaRecipesProject.Services.RecipeParagraphs/NovaRecipesProject.Services.RecipeParagraphs.csproj", "Services/NovaRecipesProject.Services.RecipeParagraphs/"]
 COPY ["Services/NovaRecipesProject.Services.RecipesSubscriptions/NovaRecipesProject.Services.RecipesSubscriptions.csproj", "Services/NovaRecipesProject.Services.RecipesSubscriptions/"]
 COPY ["Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj", "Services/NovaRecipesProject.Services.Recipes/"]
