--- a/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
+++ b/Services/NovaRecipesProject.Services.Recipes/NovaRecipesProject.Services.Recipes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\Shared\NovaRecipesProject.Common\NovaRecipesProject.Common.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.Cache\NovaRecipesProject.Services.Cache.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.Categories\NovaRecipesProject.Services.Categories.csproj" />
+    <ProjectReference Include="..\NovaRecipesProject.Services.RecipeCommentsSubscriptions\NovaRecipesProject.Services.RecipeCommentsSubscriptions.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.RecipeParagraphs\NovaRecipesProject.Services.RecipeParagraphs.csproj" />
     <ProjectReference Include="..\NovaRecipesProject.Services.RecipesSubscriptions\NovaRecipesProject.Services.RecipesSubscriptions.csproj" />
   </ItemGroup>
