--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -56,6 +56,18 @@ services:
     env_file:
       - env.recipeinfosenderworker
 
+  novarecipesproject_newcommentssenderworker_1:
+    networks:
+      - shared_novarecipesproject_net
+    env_file:
+      - env.newcommentsenderworker
+
+  novarecipesproject_newcommentssenderworker_2:
+    networks:
+      - shared_novarecipesproject_net
+    env_file:
+      - env.newcommentsenderworker
+
 # Misc services
   # Redis
   novarecipesproject_redis:
