--- a/Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj
+++ b/Shared/NovaRecipesProject.Common/NovaRecipesProject.Common.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 	
   <ItemGroup>
+    <Folder Include="Enums\" />
     <Folder Include="Tools\" />
     <Folder Include="Security\" />
   </ItemGroup>
